[gd_scene load_steps=3 format=3 uid="uid://p3sohjs1pt37"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/NodeList.gd" id="2_8afhv"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 12.2587
offset_top = 9.01583
offset_right = 202.259
offset_bottom = 33.0158

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Add node +"

[node name="RunProgram" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Do the magic!"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Node Editor" type="GraphEdit" parent="TabContainer"]
layout_mode = 2
right_disconnects = true
scroll_offset = Vector2(0, -31)
script = ExtResource("1")

[node name="Control" type="Control" parent="TabContainer/Node Editor"]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0243056
anchor_top = 0.146605
anchor_right = 0.18316
anchor_bottom = 0.595679
offset_top = -26.4552
offset_bottom = -26.4553
script = ExtResource("2_8afhv")
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="TabContainer/Node Editor/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
placeholder_text = "Search"

[node name="NodeList" type="ItemList" parent="TabContainer/Node Editor/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
item_0/text = "DMX Value"
item_1/text = "Art-Net Output"

[node name="Control2" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/RunProgram" to="." method="_on_RunProgram_pressed"]
[connection signal="connection_request" from="TabContainer/Node Editor" to="TabContainer/Node Editor" method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="TabContainer/Node Editor" to="TabContainer/Node Editor" method="_on_GraphEdit_disconnection_request"]
[connection signal="item_clicked" from="TabContainer/Node Editor/Control/NodeList" to="TabContainer/Node Editor" method="_on_item_list_item_clicked"]
[connection signal="item_clicked" from="TabContainer/Node Editor/Control/NodeList" to="TabContainer/Node Editor/Control" method="_on_node_list_item_clicked"]
